# Collatz_Drift_Certificate

./: .gitignore  Cargo.toml  LICENSE  build.rs  cert_k24_l256.json  cert_k24_l256_v2.json  cert_k24_l384.json  cert_k28_l256.json  hist.csv  m.json  readme.md
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: compute.rs
scripts/: publish_cert.sh
src/: main.rs
tests/: integration.rs
