[package]
name = "collatz_cert"
version = "0.2.0"
edition = "2021"
build = "build.rs"       

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tar = "0.4"
flate2 = { version = "1.0" }

[build-dependencies]
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serde_json = "1.0"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "compute"
harness = false
